<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_170sdp"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/fl_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_now_playing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@drawable/moonrise_kingdom"
            android:contentDescription="@string/now_playing_image"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/iv_movie_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_overlay"
            android:alpha="0.4"
            android:contentDescription="@string/now_playing_image"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/tv_now_playing_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorSliderText"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:singleLine="true"
            tools:text="@string/moonrise_kingdom" />

        <TextView
            android:id="@+id/tv_now_playing_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_11ssp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/colorSliderText"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:lineSpacingMultiplier="0"
            android:lineSpacingExtra="@dimen/_13sdp"
            android:lines="2"
            tools:text="@string/moonrise_kingdom_description" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>