<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/fl_movie"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_movie_content">

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/the_great_beauty"
            android:scaleType="fitXY"
            android:adjustViewBounds="true" />

        <ImageView
            android:id="@+id/iv_movie_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image_overlay"
            android:alpha="0.1"
            android:scaleType="fitXY" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_movie_content"
        android:layout_width="0dp"
        android:layout_height="@dimen/_70sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/fl_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_movie_arrow">

        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            tools:text="@string/movie_title"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/textBlack"
            android:fontFamily="@font/roboto_bold"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            tools:text="@string/movie_description"
            android:textSize="@dimen/_11ssp"
            android:textColor="@color/textGray"
            android:fontFamily="@font/roboto_medium"
            android:lineSpacingMultiplier="0"
            android:lineSpacingExtra="@dimen/_16ssp"
            android:lines="2"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title" />

        <TextView
            android:id="@+id/tv_movie_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="@dimen/_10ssp"
            android:textColor="@color/textGray"
            android:fontFamily="@font/roboto_medium"
            tools:text="@string/movie_date"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_movie_arrow"
        android:layout_width="@dimen/_8sdp"
        android:layout_height="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/arrow_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_movie_content"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:dividerColor="@color/textLightGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>